refactor(server): update user retrieval methods